feat(web): tree-aware IF/ELSE rendering in run detail report
Run detail used to render step results as a flat list, so an IF block
looked like one IF row followed by a mix of THEN children, ELSE
children, and SKIPPED rows with no visual grouping. Users couldn't
tell which branch the orchestrator actually picked or which steps
belonged together.

Backend (WebRunService + WebRunDtos.StepResultView):
- StepResultView gains parentStepId, branchLabel, condition. Built by
  batch-fetching the underlying WebStepEntity for every result in the
  run (single findAllById) and copying its tree metadata + condition
  JSON onto the view. No new endpoint; existing GET /api/web/runs/{id}
  now ships richer step result rows.
- Web frontend types (WebStepResultView) mirror the new fields.
  Unified StepResultView in automation.ts adds them as optional so the
  Android side (no IFs) keeps compiling unchanged.

Frontend (RunDetailPage):
- StepTimeline groups results by parentStepId into a Map and recursively
  renders via StepResultList. Root = parentStepId null.
- IfResultBlock renders an IF row with:
  * Header showing condition summary ("element #5 is visible"), status
    badge, duration. Tone matches the IF's own outcome (PASSED green,
    ERROR red, SKIPPED grey).
  * Two collapsible lanes: THEN (success-tinted) + ELSE (danger-tinted).
    Each lane labels itself as "executed", "skipped", or "no steps".
  * Auto-expand the lane that ran; auto-collapse the skipped one so the
    eye lands on what actually happened. One-click to expand the skipped
    branch and see what would have run.
- adaptWebStepResult in reports.ts now passes parentStepId/branchLabel/
  condition through unchanged (and preserves the real stepId — was being
  zeroed out before, which would have broken the tree key on the WEB
  side).

Smoke-verified end-to-end: run 28 (ELSE path executed) now returns
parent_step_id + branch_label on every child row, and the UI groups
SCREENSHOT under THEN (skipped, muted) and 